# tts_analysis

./: .gitignore  BEFORE_AFTER_COMPARISON.md  CLAUDE.md  EARLY_DATASET_GUIDE.md  IMPLEMENTATION_SUMMARY.md  PREPROCESSING_COMMANDS.md  PROGRESS_TRACKING_SUMMARY.md  README.md  analyze_all_results.py  analyze_difficulty_temperature_all.sh  ds_chehck.py  main.py  preprocess_all.sh  pyproject.toml  temperature_analysis.py  temperature_analysis_stratified.py  temperature_utils.py  test_progress_tracking.py
aime25_results_analysis_seeds_0-42-64_T0.4_vs_T0.8/: analysis_report.md
aime25_results_analysis_seeds_0-42-64_T0.4_vs_T0.8_with_model_comparison/: analysis_report.md
analysis/: __init__.py  comparative_analysis.py  core.py  datasets.py  difficulty.py  difficulty_temperature.py  discovery.py  metrics.py  parser.py  preprocessing.py  scaling_analysis.py  scoring.py  synthesis_report.py  temperature_reference_analysis.py  visualization.py
analysis_output/: temperature_comparison_report.md
comparative_analysis_MATH500-Qwen2.5-3B/: CHANGES_MAJORITY_METHOD.md  INDEX.md  README.md  SUMMARY.txt  algorithm_baseline_interactions.md  comparative_analysis_report.md  compute_efficiency_analysis.md  synthesis_report.md
comprehensive_temperature_analysis-MATH500-Qwen2.5-3B/: COUNTERINTUITIVE_FINDING_KO.md  EXECUTIVE_SUMMARY.md  EXECUTIVE_SUMMARY_KO.md  README.md  README_KO.md  TECHNICAL_ANALYSIS.md  WHY_BASELINE_MATTERS_KO.md  base_capability_verification.md  baseline_impact_example.txt  optimal_temperature_comparison.md  stratification_comparison.csv  stratification_comparison.md
(+28 files in other folders)
